--- a/indexnew.html
+++ b/indexnew.html
@@ -31,7 +31,7 @@
         <div class="header-container">
             <div class="video">
                 <video loop muted autoplay id="video">
-                    <source src="C:\Users\Bea Nolasco\OneDrive\Desktop\images\mixkit-surface-covered-with-many-fruits-and-vegetables-seen-in-detail-10433-medium.mp4" type="video/mp4">
+                    <source src="mixkit-surface-covered-with-many-fruits-and-vegetables-seen-in-detail-10433-medium.mp4" type="video/mp4">
                         This file type is not supported
                 </video>
             </div>
